Ep-02-Igniting out App

--- a/package.json
+++ b/package.json
@@ -2,5 +2,20 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
-  }
+  },
+  "name": "react",
+  "description": "",
+  "version": "1.0.0",
+  "devDependencies": {
+    "parcel": "^2.10.3",
+    "process": "^0.11.10"
+  },
+  "scripts": {
+    "test": "jest"
+  },
+  "browserslist":[
+    "last 2 versions"
+  ],
+  "author": "Drishti Goda",
+  "license": "ISC"
 }
