Ep-07-Finding the path

--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.1"
   },
   "name": "react",
   "description": "",
   "version": "1.0.0",
   "devDependencies": {
-    "parcel": "^2.10.3",
+    "parcel": "^2.11.0",
     "process": "^0.11.10"
   },
   "scripts": {
