Ep-10-Jo Dikhta hai, Vo Bikta hai

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "version": "1.0.0",
   "devDependencies": {
     "parcel": "^2.11.0",
-    "process": "^0.11.10"
+    "postcss": "^8.4.33",
+    "process": "^0.11.10",
+    "tailwindcss": "^3.4.1"
   },
   "scripts": {
     "start": "parcel index.html",
