--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "dependencies": {
     "@reduxjs/toolkit": "^2.1.0",
+    "@stripe/stripe-js": "^3.0.5",
     "@testing-library/jest-dom": "^6.3.0",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
-    "react-router-dom": "^6.21.1"
+    "react-router-dom": "^6.21.1",
+    "react-toastify": "^10.0.4",
+    "sweetalert2": "^11.10.5"
   },
   "name": "react",
   "description": "",
